--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/styled-components": "^5.1.25",
     "@types/styled-theming": "^2.2.5",
     "axios": "^0.27.2",
+    "mobx": "^6.5.0",
+    "mobx-react": "^7.4.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
